--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "sixteen",
   "version": "1.0.0",
   "description": "- Project of the old sixteen project",
-  "main": "index.js",
+  "main": "webpack.config.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack --config mywebpack.config.js"
+    "start": "webpack",
+    "server": "webpack-dev-server --open",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -18,10 +19,26 @@
   },
   "homepage": "https://github.com/eWangsf/Sixteen#readme",
   "devDependencies": {
-    "path": "^0.12.7",
-    "webpack": "^2.3.2"
+    "autoprefixer": "^7.2.3",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-react-transform": "^3.0.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
+    "clean-webpack-plugin": "^0.1.17",
+    "css-loader": "^0.28.7",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "html-webpack-plugin": "^2.30.1",
+    "postcss-loader": "^2.0.9",
+    "react-transform-hmr": "^1.0.4",
+    "style-loader": "^0.19.1",
+    "webpack": "^3.10.0",
+    "webpack-dev-server": "^2.9.7"
   },
   "dependencies": {
-    "lodash": "^4.17.4"
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2"
   }
 }
