--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-transform-hmr": "^1.0.4",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.1",
+    "url-loader": "^0.6.2",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.9.7"
   },
