--- a/package.json
+++ b/package.json
@@ -27,13 +27,20 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "clean-webpack-plugin": "^0.1.17",
+    "create-react-class": "^15.6.2",
     "css-loader": "^0.28.7",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.6",
     "html-webpack-plugin": "^2.30.1",
+    "immutable": "^3.8.2",
     "node-sass": "^4.7.2",
     "postcss-loader": "^2.0.9",
+    "prop-types": "^15.6.0",
+    "react-addons-pure-render-mixin": "^15.6.2",
+    "react-motion": "^0.5.2",
+    "react-smooth": "^1.0.0",
     "react-transform-hmr": "^1.0.4",
+    "redux-logger": "^3.0.6",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.1",
     "url-loader": "^0.6.2",
@@ -44,6 +51,9 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
-    "redux": "^3.7.2"
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
+    "redux": "^3.7.2",
+    "styled-components": "^2.4.0"
   }
 }
